--- a/XiaomiParts/AndroidManifest.xml
+++ b/XiaomiParts/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.INJECT_EVENTS"/>
 
-    <uses-sdk android:minSdkVersion="28" />
+    <uses-sdk android:minSdkVersion="29" />
 
     <application
         android:label="@string/xiaomiparts_title"
@@ -70,7 +70,7 @@
         </service>
 
         <activity
-            android:name="com.xiaomi.parts.ambient.AmbientGesturePreferenceActivity"
+            android:name=".ambient.AmbientGesturePreferenceActivity"
             android:icon="@drawable/ic_doze"
             android:theme="@style/CustomOptionsTheme"
             android:label="@string/ambient_display_gestures_title">
@@ -85,7 +85,7 @@
             android:stopWithTask="false" />
 
         <service
-            android:name=".XiaomiPartsTile"
+            android:name=".tile.XiaomiPartsTile"
             android:enabled="true"
             android:icon="@drawable/qs_xiaomi"
             android:label="@string/xiaomiparts_title"
@@ -96,7 +96,7 @@
         </service>
 
         <service
-            android:name=".DimmerTile"
+            android:name=".tile.DimmerTile"
             android:icon="@drawable/ic_backlight"
             android:label="@string/backlight_dimmer"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
@@ -110,7 +110,7 @@
             android:exported="false">
         </service>
         <service
-            android:name=".FPSTileService"
+            android:name=".tile.FPSTileService"
             android:icon="@drawable/ic_fps_info"
             android:label="@string/fps_info_title"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
