--- a/XiaomiParts/AndroidManifest.xml
+++ b/XiaomiParts/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:label="@string/xiaomiparts_title"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/CustomOptionsTheme">
 
         <receiver
             android:name=".BootReceiver"
@@ -57,6 +57,7 @@
         <activity
             android:name=".kcal.KCalSettingsActivity"
             android:exported="false"
+            android:theme="@style/CustomOptionsTheme"
             android:label="@string/advanced_settings_kcal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -71,6 +72,7 @@
         <activity
             android:name="com.xiaomi.parts.ambient.AmbientGesturePreferenceActivity"
             android:icon="@drawable/ic_doze"
+            android:theme="@style/CustomOptionsTheme"
             android:label="@string/ambient_display_gestures_title">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
@@ -90,6 +92,31 @@
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".DimmerTile"
+            android:icon="@drawable/ic_backlight"
+            android:label="@string/backlight_dimmer"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action
+                    android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
+        <service
+            android:name=".FPSInfoService"
+            android:exported="false">
+        </service>
+        <service
+            android:name=".FPSTileService"
+            android:icon="@drawable/ic_fps_info"
+            android:label="@string/fps_info_title"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action
+                    android:name="android.service.quicksettings.action.QS_TILE"/>
             </intent-filter>
         </service>
     </application>
